--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,9 @@
 /.idea/caches
 /.idea/libraries
 /.idea/modules.xml
+/.idea/compiler.xml
+/.idea/gradle.xml
+/.idea/misc.xml
 /.idea/workspace.xml
 /.idea/navEditor.xml
 /.idea/assetWizardSettings.xml
